--- a/src/app/course-list/course-list.component.html
+++ b/src/app/course-list/course-list.component.html
@@ -1,21 +1,27 @@
 <p>Welcome to Rams Learning Management.</p>
 
-<mat-card class="example-card">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Shiba Inu</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+ 
+ <ng-container *ngFor ="let cd of courseData">
+   <mat-card class="example-card"> 
+    <img mat-card-image [src]="cd.thumbnailURL" alt= {{cd.title}} width="150" height="150">
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        {{cd.title}}  
+      </p>
+      <br>
+      <p>
+          Rs.{{cd.price}}
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
+      <button mat-button>Start Learning</button>
+     
     </mat-card-actions>
   </mat-card>
+</ng-container>
+  
+ 
+
+
+
+   
