--- a/src/app/course-list/course-list.component.less
+++ b/src/app/course-list/course-list.component.less
@@ -1,8 +1,6 @@
 .example-card {
     max-width: 400px;
-  }
-  
-  .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
+    margin-bottom: 50px;
+    margin-right: 10px;
+    float: left;
   }
